[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde"]}
rust_decimal = "1.41.0"